--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhatWillWeEatToday</string>
+    <string name="app_name">Mit együnk?</string>
     <string name="slogan">Hogy tudd, mi legyen a vacsora!</string>
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
